--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Clinica
-spring.datasource.username=root
-spring.datasource.password=mysqladmin
+#spring.datasource.url=jdbc:mysql://localhost:3306/Clinica
+spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com:3306/heroku_228b07ed08eb751
+#spring.datasource.username=root
+spring.datasource.username=bb0045ae719087
+#spring.datasource.password=mysqladmin
+spring.datasource.password=2c961766
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.show-sql: true
