--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+##########
+
+spring.application.name="Clinica-BuebaVista"
+spring.cloud.config.uri:"http://localhost:8090"
+spring.cloud.config.username:admin
+spring.cloud.config.password:1234
+spring.boot.admin.cliente.url:"http://localhost:8090"
